branches/groupoffice-5.0/www/views/Extjs3/themes/Group-Office/xtheme-groupoffice.css
/* ... */
.x-window-plain .x-window-mc {
background-color:#fff;
border-color: #fff;
}

.x-window-mc{
	background-color:#fff;
}

.go-paging-tb .x-btn{
	border: none !important;
}

#go-module-panel-calendar .cal-display-panel .x-toolbar .x-btn-text{
	height: 20px;
	margin: 0 5px;
}

.go-moduletabs .go-head-tb .x-btn-mc em.x-btn-arrow {
	background-image: url(images/button/arrow.gif);
}

.x-window-tl, .x-window-tr, .x-window-tc, .x-window-bl, .x-window-br, .x-window-bc  {
	background-image: none;
}

.x-window{
	background-color: #fff;
	border: 1px solid #2b9bc9;
}
.x-window-ml, .x-window-mr {
	background-image: none;
	}

.x-window-header-text{
	color: #000;
	font-weight: bold;
}

.x-window .x-panel-body ul.x-tab-strip-top{
	margin: 10px 0 0 0;
}

.x-window .x-btn-text{
	color: #000;
}

.x-window-tl {
	padding-left: 15px;
}

.x-window-tr {
	padding-right: 15px;
}

.x-window-tc{
	padding-top: 5px;
}

.x-menu {
	background-color: #fff;
	background-image: none;
}

.x-menu-floating {
	border-color: #2b9bc9;
}

.x-menu-item-active{
	background-color: #e6f5fa;
	background-image: none;
	border-color: #fff;
}

.x-window-mc{
	border-color: #fff;
}

.x-window .x-toolbar {
	background-color: #fff;
	padding: 0 10px;
}

.x-window .x-item-disabled *{
	color: #000 !important;
}

/*.x-html-editor-wrap {
	border-color: #fff;
}

.x-html-editor-wrap iframe{
	border-color: #2b9bc9;
}*/

.x-html-editor-wrap{
	border-color: #2b9bc9;
}


.x-html-editor-wrap textarea{
	background-color:white !important;
}

.x-html-editor-tb .x-btn{
	border:0 !important;
}

.x-html-editor-tb .x-btn-icon .x-btn-small .x-btn-text {
	height: 16px;
	width: 16px;
}

.x-html-editor-tb{
	border-bottom:1px solid #2b9bc9;
}

.x-box-tl, .x-box-tr, .x-box-tc, .x-box-br, .x-box-bl, .x-box-bc, .x-box-ml, .x-box-mr, .x-box-mc  {
	background: #fff none !important
}

.sort-asc .x-grid3-sort-icon {
	background-image: url(/images/extjs/grid/sort_asc.gif);
}

.sort-desc .x-grid3-sort-icon {
	background-image: url(/images/extjs/grid/sort_desc.gif);
}

textarea.x-item-disabled{
	background: #eee !important;
	border: 1px solid #999 !important;
}

.x-panel-tl, .x-panel-tc, .x-panel-tr, .x-panel-ml, .x-panel-mr, .x-panel-bl, .x-panel-br, .x-panel-bc {
	background: none !important;
	border: none !important;
}

.x-portlet{
	background: #fff;
	border: 1px solid #2b9bc9;
}

.x-panel-tl .x-panel-header {
	color: #000;
}

.x-date-middle .x-btn .x-btn-text {
	color: #000;
	font-size: 12px;
	text-transform: none;
}

.ext-webkit table.x-date-inner {
	padding: 5px 0;
}

.x-date-bottom .x-btn-text{
	color: #000;
}

.x-date-middle .x-btn-mc em.x-btn-arrow {
	background-image: url(/images/extjs/toolbar/btn-arrow.gif);
}

.x-toolbar .x-item-disabled {
	cursor: default;
	opacity: .4;
	-moz-opacity: .4;
	filter: alpha(opacity=40);
}
.x-form-text, textarea.x-form-field {
	background: #e5f5f9 none;
}

.x-form-invalid, textarea.x-form-invalid {
background-color: #e5f5f9;
background-image: url(../../ext/resources/images/default/grid/invalid_line.gif);
background-repeat: repeat-x;
background-position: bottom;
border-color: #c30 !important;
}

.x-panel-dd-spacer{
	background-color: #e5f5f9;
}

.ext-strict .x-menu-item-icon{
	display: none;
}

a.x-menu-item{
	padding: 3px 21px 3px 6px;
}

#startMenu  a.x-menu-item{
	padding: 3px 21px 3px 27px;
}

#startMenu .x-menu-item-icon{
	display: block;
}


.go-head-tb .x-btn-pressed{
	background: #278bb5;
}

a.x-menu-check-item {
	padding: 3px 21px 3px 24px;
}

.ext-strict .x-menu-check-item .x-menu-item-icon{
	display: block;
}

.x-menu-item-checked .x-menu-group-item .x-menu-item-icon{
	background-image: url(images/extjs/menu/group-checked.gif);
}

.x-tab-scroller-right {
	background-image: url(images/extjs/tabs/scroll-right.gif);
	border-bottom-color: #2b9bc9;
}

.x-tab-scroller-left {
	background-image: url(images/extjs/tabs/scroll-left.gif);
	border-bottom-color: #2b9bc9;
}

.go-display-panel .x-toolbar-more-icon {
	background-image: url(images/extjs/toolbar/more.gif)!important;
	width: 12px !important;
}

.x-toolbar{
	padding: 10px 10px 0px 10px !important;
}

.go-paging-tb{
	padding: 0px 10px 10px 10px !important;
}

.go-head-tb {
	padding: 0px 0px 10px !important;
}

.x-form{
	padding: 0 10px !important;
}


.x-small-editor .x-form-field-wrap .x-form-trigger {
	border-bottom: 1px solid #009bc9;
}
.x-html-editor-tb .x-small-editor{
	padding:2px !important;
}

.ext-el-mask-msg{
	background:white !important;
	border:1px solid #009cc5;
}

.ext-el-mask-msg div {
background: none;
border: none;
padding:10px 20px;

color:#666;
font: 13px helvetica;
}

.x-layout-collapsed{
	background-color:#2a9ac9;
	border-color:#2a9ac9;
}

.go-display-panel .x-btn-text, .x-window .x-panel-tbar .x-btn-text{
	background: none !important;
	height: 12px !important;
}

.go-display-panel  .x-panel-tbar .btn-refresh {
	background: url(images/extjs/grid/refresh-noborder.gif) no-repeat !important;
	width: 14px !important;
	overflow:hidden;
	text-indent: 100px;
}

.go-display-panel  .x-panel-tbar .btn-print {
	background: url(images/extjs/grid/print-noborder.gif) no-repeat !important;
	width: 14px !important;
	overflow:hidden;
	text-indent: 100px;
}

.go-display-panel .x-panel-tbar .x-toolbar-more-icon {
background-image: url(images/extjs/toolbar/more.gif)!important;
}


.x-window .x-border-layout-ct{
	background-color:#2a9ac9 !important;
}

.x-panel-noborder .x-panel-header-noborder {
	border-bottom-color:white;
}

